added hero section

--- a/index.html
+++ b/index.html
@@ -125,6 +125,37 @@
 
   </header>
   <!-- header end here -->
+  <!-- Hero Section start here -->
+  <div class="">
+
+    <section class="home">
+      <div class="container">
+        <div class="row">
+          <div class="home-text">
+
+            <p class="animate-text">
+              <span>AI</span>
+              <span>CLOUD</span>
+              <span>APP DEVELOPMENT</span>
+              <span>DIGITAL MARKETING</span>
+              <span>FLUTTER</span>
+              <span>DESIGN</span>
+            </p>
+            <h1>made right.</h1>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </div>
+
+
+
+
+
+  <!-- Hero Section end here -->
+
+
 
   <!-- services start here -->
 
@@ -205,8 +236,9 @@
 
   <!-- contact start here -->
 
-    
-      
+
+
+
   <!-- contact end here -->
 
 
@@ -354,19 +386,40 @@
 
 
   </script>
-
   <script>
-    var swiper = new Swiper(".mySwiper", {
-      loop: true,
-      navigation: {
-        nextEl: ".swiper-button-next",
-        prevEl: ".swiper-button-prev",
-      },
-      autoplay: {
-        delay: 3000,
+    const txts = document.querySelector(".animate-text").children,
+      txtsLen = txts.length;
+    let index = 0;
+    const textInTimer = 3000,
+      textOutTimer = 2800;
+
+    function animateText() {
+      for (let i = 0; i < txtsLen; i++) {
+        txts[i].classList.remove("text-in", "text-out");
       }
-    });
+      txts[index].classList.add("text-in");
+
+      setTimeout(function () {
+        txts[index].classList.add("text-out");
+      }, textOutTimer)
+
+      setTimeout(function () {
+
+        if (index == txtsLen - 1) {
+          index = 0;
+        }
+        else {
+          index++;
+        }
+        animateText();
+      }, textInTimer);
+    }
+
+    window.onload = animateText;
+
   </script>
+
+
 </body>
 
 </html>
