--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   <!-- services start here -->
 
   <section class="text-gray-600 body-font">
-    <div class="container px-5 py-24 mx-auto">
+    <div class="container px-5 py-4 mx-auto">
       <div class="flex flex-wrap -m-4">
         <div class="p-4 md:w-1/3">
           <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
@@ -231,6 +231,21 @@
     </div>
   </section>
   <!-- services start here -->
+
+    <!-- client and accredation start here -->
+        <div class="container px-5  mx-auto">
+          <img src="images/c.PNG" alt="">
+          <h1 class="text-4xl p-2 ">Whatever you need in digital and AI, if you want quality</h1>
+          <h1 class="text-4xl p-2 ">outcomes, our team of AI technology consultants, designers,</h1>
+          <h1 class="text-4xl p-2 ">and software developers are ready to help <span class="text-blue-400">you on your</span></h1>
+       
+          <h1 class="text-4xl p-2 text-blue-400	 ">journey</h1>
+        </div>
+
+    <!-- client and accredation end here -->
+
+
+
 
 
 
