updated made right section

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
             paving the way for success.</p>
         </div>
         <div class="">
-          <i class="fa-solid fa-circle-user fa-4x"></i>
+          <i class="fa-solid fa-certificate fa-4x"></i>
           <h1 class="py-6 font-semibold text-2xl text-gray-600">Crafting Expertise
 
           </h1>
