updsted why choose section

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">Company</a>
               <div class="dropdown-menu">
                 <a href="#">About Us</a>
-                <a href="#">Why Us?</a>
+                <a href="whychooseus.html">Why Us?</a>
                 <a href="#">Our Team</a>
                 <a href="#">Photo Gallery</a>
                 <a href="#">Career</a>
@@ -103,7 +103,7 @@
               <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">Company</a>
               <div class="dropdown-menu absolute hidden">
                 <a href="#">About Us</a>
-                <a href="#">Why Us?</a>
+                <a href="whychooseus.html">Why Us?</a>
                 <a href="#">Our Team</a>
                 <a href="#">Photo Gallery</a>
                 <a href="#">Career</a>
