added photo gallary page

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <a href="#">About Us</a>
                 <a href="whychooseus.html">Why Us?</a>
                 <a href="#">Our Team</a>
-                <a href="#">Photo Gallery</a>
+                <a href="gallary.html">Photo Gallery</a>
                 <a href="#">Career</a>
               </div>
             </div>
