--- a/gallary.html
+++ b/gallary.html
@@ -77,7 +77,7 @@
               <div class="dropdown-menu">
                 <a href="#">About Us</a>
                 <a href="whychooseus.html">Why Us?</a>
-                <a href="#">Our Team</a>
+                <a href="team.html">Our Team</a>
                 <a href="gallary.html">Photo Gallery</a>
                 <a href="#">Career</a>
               </div>
@@ -104,8 +104,8 @@
               <div class="dropdown-menu absolute hidden">
                 <a href="#">About Us</a>
                 <a href="whychooseus.html">Why Us?</a>
-                <a href="#">Our Team</a>
-                <a href="#">Photo Gallery</a>
+                <a href="team.html">Our Team</a>
+                <a href="gallary.html">Photo Gallery</a>
                 <a href="#">Career</a>
               </div>
             </div>
