added career page

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <a href="whychooseus.html">Why Us?</a>
                 <a href="team.html">Our Team</a>
                 <a href="gallary.html">Photo Gallery</a>
-                <a href="#">Career</a>
+                <a href="career.html">Career</a>
               </div>
             </div>
             <div class="dropdown">
@@ -106,7 +106,7 @@
                 <a href="whychooseus.html">Why Us?</a>
                 <a href="team.html">Our Team</a>
                 <a href="gallary.html">Photo Gallery</a>
-                <a href="#">Career</a>
+                <a href="career.html">Career</a>
               </div>
             </div>
             <div class="dropdown relative">
