--- a/whychooseus.html
+++ b/whychooseus.html
@@ -75,7 +75,7 @@
             <div class="dropdown">
               <a href="#" class="block py-2 px-3 text-white hover:bg-blue-700">Company</a>
               <div class="dropdown-menu">
-                <a href="#">About Us</a>
+                <a href="about us.html">About Us</a>
                 <a href="whychooseus.html">Why Us?</a>
                 <a href="team.html">Our Team</a>
                 <a href="gallary.html">Photo Gallery</a>
@@ -102,7 +102,7 @@
             <div class="dropdown relative">
               <a href="#" class="text-white py-2 px-3 hover:bg-blue-700">Company</a>
               <div class="dropdown-menu absolute hidden">
-                <a href="#">About Us</a>
+                <a href="about us.html">About Us</a>
                 <a href="whychooseus.html">Why Us?</a>
                 <a href="team.html">Our Team</a>
                 <a href="gallary.html">Photo Gallery</a>
